# flask-kubernetes

./: README.md
services/auth/: .env.example  Dockerfile  init.sql  main.py  pyproject.toml  requirements.txt
services/auth/app/: __init__.py  routes.py
services/auth/manifests/: auth-configmap.yaml  auth-deployment.yaml  auth-secret.yaml  auth-service.yaml
services/converter/: .env.example  Dockerfile  main.py  pyproject.toml
services/converter/app/: worker.py
services/converter/manifests/: converter-configmap.yaml  converter-deployment.yaml  converter-secret.yaml
services/gateway/: .env.example  Dockerfile  main.py  pyproject.toml
services/gateway/app/: __init__.py  extensions.py
services/gateway/app/routes/: auth_routes.py  download_routes.py  health_routes.py  upload_routes.py
services/gateway/app/services/: auth_service.py  storage_service.py
services/gateway/manifests/: gateway-configmap.yaml  gateway-deployment.yaml  gateway-ingress.yaml  gateway-services.yaml  ingress.yaml
services/mongodb/manifests/: mongodb-sevice.yaml  mongodb-statefulset.yaml  mongodb-storageclass.yaml
services/notifcation/: .env.example  Dockerfile  main.py  pyproject.toml
services/notifcation/app/: consumer.py  notifier.py
services/notifcation/manifests/: notification-deployment.yaml
services/rabbitmq/manifests/: rabbitmq-configmap.yaml  rabbitmq-ingress.yaml  rabbitmq-pvc.yaml  rabbitmq-secret.yaml  rabbitmq-service.yaml  rabbitmq-statefulset.yaml
