[project]
name = "auth"
version = "0.1.0"
description = "Auth microservice for login, registration, and JWT handling"
requires-python = ">=3.10"
dependencies = [
    "flask==3.1.0",
    "flask-mysqldb==2.0.0",
    "mysqlclient==2.2.7",
    "python-dotenv==1.1.0",
    "pyjwt==2.10.1",
    "blinker==1.9.0",
    "click==8.1.8",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "werkzeug==3.1.3"
]

# dev dependencies listed separately
[tool.uv]
dev-dependencies = [
    "astroid==3.3.9",
    "pylint==3.3.6",
    "isort==6.0.1",
    "platformdirs==4.3.7",
    "tomlkit==0.13.2",
    "dill==0.3.9",
    "mccabe==0.7.0",
    "colorama==0.4.6"
]
