[project]
name = "notification"
version = "0.1.0"
description = "API notification for microservices"
requires-python = ">=3.10"
dependencies = [
    "flask==3.1.0",
    "pika>=1.3.2",
    "pylint>=3.3.6",
    "python-dotenv==1.1.0",
    "requests>=2.32.4",
]

[tool.uv]
dev-dependencies = [
    "pylint==3.3.6",
    "isort==6.0.1"
]
